bc5fa525-1f32-4c53-bf17-b98dd59ff12e/2a289672-5188-4130-b784-5e8f2b44210a/HRMS/kubernates/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service-b6aa7816-8002-4b22-bf6b-5b85b15f49b2
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: rest-app-b6aa7816-8002-4b22-bf6b-5b85b15f49b2
spec:
  selector:
    app: rest-app-b6aa7816-8002-4b22-bf6b-5b85b15f49b2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
